<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/search">

    <fragment
        android:id="@+id/search"
        android:name="com.gaugustini.vort.ui.search.SearchFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_search_to_result"
            app:destination="@id/result" />
        <action
            android:id="@+id/action_search_to_dialog"
            app:destination="@id/dialog_search" />
    </fragment>

    <dialog
        android:id="@+id/dialog_search"
        android:name="com.gaugustini.vort.ui.search.SearchDialog"
        tools:layout="@layout/dialog_search" />

    <fragment
        android:id="@+id/result"
        android:name="com.gaugustini.vort.ui.result.ResultFragment"
        android:label="@string/result"
        tools:layout="@layout/fragment_result" />

    <fragment
        android:id="@+id/settings"
        android:name="com.gaugustini.vort.ui.setting.SettingFragment"
        android:label="@string/settings" />

</navigation>
